[project]
name = "request-logger"
version = "0.1.0"
description = "Flask request logger for CTF"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []